# fapws

./: .fapws_vimprj  .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  libfapws.pc.in  makefile
debian/: README.Debian  changelog  control  copyright  fapws-dev.install  fapws.install  rules
doc/: FAP_LLD.doc
doc/design/: fap_design.xml  index.html
doc/design/fap_mdl/: 134530  134530.diagram  141058  141058.diagram  147586  147586.diagram  147714.diagram  154114  154242  154242.diagram  160642.diagram  160770.diagram  167298.diagram  167426.diagram  167426_2.d  173826.diagram  173954.diagram  2.session  fap_mdl.prj
doc/design/src/: fig_refs_conns_1.odg  fig_refs_conns_ext.odg  fig_test_sort_ext_ctrl.odg
doc/requirements/: fap_req.xml  index.html
doc/tests/: ut_spec_creat.dia
etc/: objspec.dtd
src/: Makefile.am  deslbase.cpp  deslbase.h  fapbase.cpp  fapbase.h  fapext.cpp  fapext.h  fapfact.cpp  fapfact.h  faplogger.cpp  faplogger.h  fapopvi.cpp  fapopvi.h  fapplat.h  fapplugin.h  fapstext.cpp  fapstext.h  faptran.h  fapview.h  fapviewprim.cpp  fapviewprim.h  fapws.cpp  fapws.h  objspec.dtd  panics.h  sample.xml  tadesl.cpp  tadesl.h  viewgtk.cpp  viewgtk.h
test/: Makefile.am  ut-fapws-lib  ut_conn.cpp  ut_conn_spec.xml  ut_contr_spec.xml  ut_control.cpp  ut_embmod.cpp  ut_embmod_vect.xml  ut_emtran.cpp  ut_emtran_spec.xml  ut_emtran_spec_2.xml  ut_emtran_spec_3.xml  ut_emtran_vect.xml  ut_emtran_vectgf.xml  ut_events_counter.cpp  ut_events_counter.h  ut_ext_mut.cpp  ut_game_xo.cpp  ut_game_xo.h  ut_modul.cpp  ut_modul_base.xml  ut_modul_ext1.xml  ut_modul_incr.xml  ut_modul_loc.xml  ut_modul_loc1.xml  ut_modul_save_tmp.xml  ut_mut_deta1.xml  ut_mut_deta2.xml  ut_simple_increase.cpp  ut_simple_increase.h  ut_spec_creat.cpp  ut_spec_creat.h  ut_spec_creat_1.xml  ut_spec_ext_mut.xml
trag/: Makefile.am
trag/tadesl/: Makefile.am  tadesl.cpp  tadesl.h
